<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="ir.digipay.cryptocurrency.ui.main.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_medium"
        android:paddingTop="32dp"
        android:paddingEnd="@dimen/padding_medium">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_stn"
            android:text="@string/label_sort_by"
            android:textColor="@color/white" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/ch_group_sort_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_market_cap"
                style="@style/ChipItemStyle"
                android:text="@string/label_market_cap" />

            <com.google.android.material.chip.Chip
                android:id="@+id/circulating_supply"
                style="@style/ChipItemStyle"
                android:text="@string/label_circulating_supply" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_name"
                style="@style/ChipItemStyle"
                android:text="@string/label_name" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_price"
                style="@style/ChipItemStyle"
                android:text="@string/label_price" />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_stn"
            android:text="@string/label_sort_direction"
            android:textColor="@color/white" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/ch_group_sort_direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_ascending"
                style="@style/ChipItemStyle"
                android:text="@string/label_ascending" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_descending"
                style="@style/ChipItemStyle"
                android:text="@string/label_descending" />
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_stn"
            android:layout_marginBottom="@dimen/margin_stn"
            android:gravity="center"
            android:text="@string/label_done"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/ic_done"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/white" />
    </LinearLayout>
</layout>