<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="ir.digipay.cryptocurrency.model.Title" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{item.symbol}"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/symbol" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{item.name}"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_symbol"
            app:layout_constraintStart_toStartOf="@id/guideline_two"
            tools:text="@string/currency_name" />

        <TextView
            android:id="@+id/tv_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{item.value}"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_symbol"
            app:layout_constraintStart_toStartOf="@id/guideline"
            tools:text="@string/value" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".18" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>