<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="ir.digipay.cryptocurrency.ui.currencies.CurrenciesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symbol"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_symbol"
            app:layout_constraintStart_toStartOf="@id/guideline_two" />

        <TextView
            android:id="@+id/tv_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_symbol"
            app:layout_constraintStart_toStartOf="@id/guideline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_currencies"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_symbol"
            tools:listitem="@layout/item_currency" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".18" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>