<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="ir.digipay.cryptocurrency.ui.detail.CoinDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_currency"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/wallet" />

        <ImageView
            android:id="@+id/iv_coin"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lottie_currency"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/iv_coin"
            app:layout_constraintTop_toBottomOf="@id/iv_coin" />

        <TextView
            android:id="@+id/tv_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/symbol"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/iv_coin"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_market_cap"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/iv_coin"
            app:layout_constraintTop_toBottomOf="@id/tv_symbol" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_price"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/iv_coin"
            app:layout_constraintTop_toBottomOf="@id/tv_rank" />

        <TextView
            android:id="@+id/tv_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/percentage_change"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/iv_coin"
            app:layout_constraintTop_toBottomOf="@id/tv_price" />

        <TextView
            android:id="@+id/tv_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@{vm.currency.name}"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/iv_coin"
            tools:text="name" />

        <TextView
            android:id="@+id/tv_symbol_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@{vm.currency.symbol}"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/tv_name_value"
            tools:text="symbol" />

        <TextView
            android:id="@+id/tv_rank_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:capMarket="@{vm.currency.marketCap}"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/tv_symbol_value"
            tools:text="rank" />

        <TextView
            android:id="@+id/tv_price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/tv_rank_value"
            app:price="@{vm.currency.price}"
            tools:text="price" />

        <TextView
            android:id="@+id/tv_change_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/tv_price_value"
            app:percentChange="@{vm.currency.percentChange}"
            tools:text="change 24" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="tv_name,tv_rank,tv_change,tv_symbol,tv_price"
            tools:layout_editor_absoluteX="411dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>